--- a/SW/Firmware/platformio.ini
+++ b/SW/Firmware/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+lib_deps =
+    adafruit/DHT sensor library@^1.4.4
+    adafruit/Adafruit Unified Sensor@^1.1.7
