--- a/SW/Firmware/platformio.ini
+++ b/SW/Firmware/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps =
     adafruit/DHT sensor library@^1.4.4
     adafruit/Adafruit Unified Sensor@^1.1.7
+    marcoschwartz/LiquidCrystal_I2C@^1.1.4
