--- a/SW/Firmware/platformio.ini
+++ b/SW/Firmware/platformio.ini
@@ -11,6 +11,7 @@
 [env:esp12e]
 platform = espressif8266
 board = esp12e
+board_build.filesystem = littlefs
 framework = arduino
 lib_deps =
     adafruit/DHT sensor library@^1.4.4
