--- a/SW/Firmware/platformio.ini
+++ b/SW/Firmware/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp12e]
-platform = espressif8266
+platform = espressif8266@2.5.0
 board = esp12e
 board_build.filesystem = littlefs
 framework = arduino
